--- a/Week2/DATA620_Assignment_Week2.ipynb
+++ b/Week2/DATA620_Assignment_Week2.ipynb
@@ -17,14 +17,14 @@
     "\n",
     "The assignment this week is to recreate the following graph using a graphing package of our choosing.  I chose networkX and tried to keep things simple as this is my first foray into network analytics.\n",
     "\n",
-    "![Assignment Task](https://raw.githubusercontent.com/plb2018/data620/master/Week2/620_week2.PNG)\n",
+    "![image.png](attachment:image.png)\n",
     "\n",
     "First we'll load the required libraries.  We're only using networkX and pyplot for this task"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,15 +82,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NODES ['Andre', 'Beverly', 'Carol', 'Diane', 'Ed', 'Fernando', 'Garth', 'Heather', 'Ike', 'Jane']\n",
-      "EDGES [('Andre', 'Carol'), ('Andre', 'Diane'), ('Andre', 'Fernando'), ('Andre', 'Beverly'), ('Beverly', 'Fernando'), ('Beverly', 'Diane'), ('Beverly', 'Ed'), ('Beverly', 'Garth'), ('Carol', 'Diane'), ('Carol', 'Fernando'), ('Diane', 'Fernando'), ('Diane', 'Garth'), ('Diane', 'Ed'), ('Ed', 'Garth'), ('Fernando', 'Garth'), ('Fernando', 'Heather'), ('Garth', 'Heather'), ('Heather', 'Ike'), ('Ike', 'Jane')]\n"
+      "Printing Nodes:\n",
+      "0 Andre\n",
+      "1 Beverly\n",
+      "2 Carol\n",
+      "3 Diane\n",
+      "4 Ed\n",
+      "5 Fernando\n",
+      "6 Garth\n",
+      "7 Heather\n",
+      "8 Ike\n",
+      "9 Jane\n",
+      "\n",
+      "\n",
+      "Printing Edges:\n",
+      "0 ('Andre', 'Carol')\n",
+      "1 ('Andre', 'Diane')\n",
+      "2 ('Andre', 'Fernando')\n",
+      "3 ('Andre', 'Beverly')\n",
+      "4 ('Beverly', 'Fernando')\n",
+      "5 ('Beverly', 'Diane')\n",
+      "6 ('Beverly', 'Ed')\n",
+      "7 ('Beverly', 'Garth')\n",
+      "8 ('Carol', 'Diane')\n",
+      "9 ('Carol', 'Fernando')\n",
+      "10 ('Diane', 'Fernando')\n",
+      "11 ('Diane', 'Garth')\n",
+      "12 ('Diane', 'Ed')\n",
+      "13 ('Ed', 'Garth')\n",
+      "14 ('Fernando', 'Garth')\n",
+      "15 ('Fernando', 'Heather')\n",
+      "16 ('Garth', 'Heather')\n",
+      "17 ('Heather', 'Ike')\n",
+      "18 ('Ike', 'Jane')\n"
      ]
     }
    ],
@@ -101,8 +132,17 @@
     "G.add_edges_from(edges)\n",
     "\n",
     "#check nodes and edges\n",
-    "print(\"NODES\",G.nodes())\n",
-    "print(\"EDGES\", G.edges())\n"
+    "print(\"Printing Nodes:\")\n",
+    "for i,node in enumerate(G.nodes()):\n",
+    "    print(i,node)\n",
+    "print(\"\\n\")\n",
+    "    \n",
+    "print(\"Printing Edges:\")\n",
+    "for i,edge in enumerate(G.edges()):\n",
+    "    print(i,edge)\n",
+    "    \n",
+    "#print(\"NODES\",G.nodes())\n",
+    "#print(\"EDGES\", G.edges())\n"
    ]
   },
   {
@@ -114,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
