--- a/Week2/DATA620_Assignment_Week2.ipynb
+++ b/Week2/DATA620_Assignment_Week2.ipynb
@@ -135,10 +135,7 @@
     "    \n",
     "print(\"Printing Edges:\")\n",
     "for i,edge in enumerate(G.edges()):\n",
-    "    print(i,edge)\n",
-    "    \n",
-    "#print(\"NODES\",G.nodes())\n",
-    "#print(\"EDGES\", G.edges())\n"
+    "    print(i,edge)   "
    ]
   },
   {
