--- a/Week3/Week3 - Graph Visualization.ipynb
+++ b/Week3/Week3 - Graph Visualization.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -105,114 +105,6 @@
       "8 Romance\n",
       "9 Waiting to Exhale (1995)\n",
       "10 Drama\n",
-      "11 Father of the Bride Part II (1995)\n",
-      "12 Heat (1995)\n",
-      "13 Action\n",
-      "14 Crime\n",
-      "15 Thriller\n",
-      "16 Sabrina (1995)\n",
-      "17 Tom and Huck (1995)\n",
-      "18 Sudden Death (1995)\n",
-      "19 GoldenEye (1995)\n",
-      "20 \"American President, The (1995)\n",
-      "21 Romance\"\n",
-      "22 Dracula: Dead and Loving It (1995)\n",
-      "23 Horror\n",
-      "24 Balto (1995)\n",
-      "25 Nixon (1995)\n",
-      "26 Cutthroat Island (1995)\n",
-      "27 Casino (1995)\n",
-      "28 Sense and Sensibility (1995)\n",
-      "29 Four Rooms (1995)\n",
-      "30 Ace Ventura: When Nature Calls (1995)\n",
-      "31 Money Train (1995)\n",
-      "32 Get Shorty (1995)\n",
-      "33 Copycat (1995)\n",
-      "34 Mystery\n",
-      "35 Assassins (1995)\n",
-      "36 Powder (1995)\n",
-      "37 Sci-Fi\n",
-      "38 Leaving Las Vegas (1995)\n",
-      "39 Othello (1995)\n",
-      "40 Now and Then (1995)\n",
-      "41 Persuasion (1995)\n",
-      "42 \"City of Lost Children, The (Cité des enfants perdus, La) (1995)\n",
-      "43 Sci-Fi\"\n",
-      "44 Shanghai Triad (Yao a yao yao dao waipo qiao) (1995)\n",
-      "45 Dangerous Minds (1995)\n",
-      "46 Twelve Monkeys (a.k.a. 12 Monkeys) (1995)\n",
-      "47 Babe (1995)\n",
-      "48 Dead Man Walking (1995)\n",
-      "49 It Takes Two (1995)\n",
-      "50 Clueless (1995)\n",
-      "51 \"Cry, the Beloved Country (1995)\n",
-      "52 Drama\"\n",
-      "53 Richard III (1995)\n",
-      "54 War\n",
-      "55 Dead Presidents (1995)\n",
-      "56 Restoration (1995)\n",
-      "57 Mortal Kombat (1995)\n",
-      "58 To Die For (1995)\n",
-      "59 How to Make an American Quilt (1995)\n",
-      "60 Seven (a.k.a. Se7en) (1995)\n",
-      "61 Pocahontas (1995)\n",
-      "62 Musical\n",
-      "63 When Night Is Falling (1995)\n",
-      "64 \"Usual Suspects, The (1995)\n",
-      "65 Thriller\"\n",
-      "66 Mighty Aphrodite (1995)\n",
-      "67 Lamerica (1994)\n",
-      "68 \"Big Green, The (1995)\n",
-      "69 Comedy\"\n",
-      "70 Georgia (1995)\n",
-      "71 Home for the Holidays (1995)\n",
-      "72 \"Postman, The (Postino, Il) (1994)\n",
-      "73 \"Indian in the Cupboard, The (1995)\n",
-      "74 Fantasy\"\n",
-      "75 Eye for an Eye (1996)\n",
-      "76 Mr. Holland's Opus (1995)\n",
-      "77 Don't Be a Menace to South Central While Drinking Your Juice in the Hood (1996)\n",
-      "78 Two if by Sea (1996)\n",
-      "79 Bio-Dome (1996)\n",
-      "80 Lawnmower Man 2: Beyond Cyberspace (1996)\n",
-      "81 French Twist (Gazon maudit) (1995)\n",
-      "82 Friday (1995)\n",
-      "83 From Dusk Till Dawn (1996)\n",
-      "84 Fair Game (1995)\n",
-      "85 Kicking and Screaming (1995)\n",
-      "86 \"Misérables, Les (1995)\n",
-      "87 War\"\n",
-      "88 Bed of Roses (1996)\n",
-      "89 Big Bully (1996)\n",
-      "90 Screamers (1995)\n",
-      "91 \"Crossing Guard, The (1995)\n",
-      "92 \"Juror, The (1996)\n",
-      "93 \"White Balloon, The (Badkonake sefid) (1995)\n",
-      "94 Things to Do in Denver When You're Dead (1995)\n",
-      "95 Antonia's Line (Antonia) (1995)\n",
-      "96 Once Upon a Time... When We Were Colored (1995)\n",
-      "97 Angels and Insects (1995)\n",
-      "98 White Squall (1996)\n",
-      "99 Dunston Checks In (1996)\n",
-      "100 Black Sheep (1996)\n",
-      "101 Nick of Time (1995)\n",
-      "102 Mary Reilly (1996)\n",
-      "103 Vampire in Brooklyn (1995)\n",
-      "104 Beautiful Girls (1996)\n",
-      "105 Broken Arrow (1996)\n",
-      "106 In the Bleak Midwinter (1995)\n",
-      "107 \"Hate (Haine, La) (1995)\n",
-      "108 City Hall (1996)\n",
-      "109 Bottle Rocket (1996)\n",
-      "110 Mr. Wrong (1996)\n",
-      "111 Unforgettable (1996)\n",
-      "112 Happy Gilmore (1996)\n",
-      "113 \"Bridges of Madison County, The (1995)\n",
-      "114 Nobody Loves Me (Keiner liebt mich) (1994)\n",
-      "115 Muppet Treasure Island (1996)\n",
-      "116 Braveheart (1995)\n",
-      "117 Taxi Driver (1976)\n",
-      "118 Rumble in the Bronx (Hont faan kui) (1995)\n",
       "\n",
       "\n",
       "Printing Edges:\n",
@@ -226,225 +118,7 @@
       "7 ('Adventure', 'GoldenEye (1995)')\n",
       "8 ('Adventure', 'Balto (1995)')\n",
       "9 ('Adventure', 'Cutthroat Island (1995)')\n",
-      "10 ('Adventure', '\"City of Lost Children, The (Cité des enfants perdus, La) (1995)')\n",
-      "11 ('Adventure', 'Mortal Kombat (1995)')\n",
-      "12 ('Adventure', 'Lamerica (1994)')\n",
-      "13 ('Adventure', '\"Indian in the Cupboard, The (1995)')\n",
-      "14 ('Adventure', 'White Squall (1996)')\n",
-      "15 ('Adventure', 'Broken Arrow (1996)')\n",
-      "16 ('Adventure', 'Bottle Rocket (1996)')\n",
-      "17 ('Adventure', 'Muppet Treasure Island (1996)')\n",
-      "18 ('Adventure', 'Rumble in the Bronx (Hont faan kui) (1995)')\n",
-      "19 ('Animation', 'Balto (1995)')\n",
-      "20 ('Animation', 'Pocahontas (1995)')\n",
-      "21 ('Children', 'Jumanji (1995)')\n",
-      "22 ('Children', 'Tom and Huck (1995)')\n",
-      "23 ('Children', 'Balto (1995)')\n",
-      "24 ('Children', 'Now and Then (1995)')\n",
-      "25 ('Children', 'Babe (1995)')\n",
-      "26 ('Children', 'It Takes Two (1995)')\n",
-      "27 ('Children', 'Pocahontas (1995)')\n",
-      "28 ('Children', '\"Big Green, The (1995)')\n",
-      "29 ('Children', '\"Indian in the Cupboard, The (1995)')\n",
-      "30 ('Children', '\"White Balloon, The (Badkonake sefid) (1995)')\n",
-      "31 ('Children', 'Dunston Checks In (1996)')\n",
-      "32 ('Children', 'Muppet Treasure Island (1996)')\n",
-      "33 ('Comedy', 'Grumpier Old Men (1995)')\n",
-      "34 ('Comedy', 'Waiting to Exhale (1995)')\n",
-      "35 ('Comedy', 'Father of the Bride Part II (1995)')\n",
-      "36 ('Comedy', 'Sabrina (1995)')\n",
-      "37 ('Comedy', '\"American President, The (1995)')\n",
-      "38 ('Comedy', 'Dracula: Dead and Loving It (1995)')\n",
-      "39 ('Comedy', 'Four Rooms (1995)')\n",
-      "40 ('Comedy', 'Ace Ventura: When Nature Calls (1995)')\n",
-      "41 ('Comedy', 'Money Train (1995)')\n",
-      "42 ('Comedy', 'Get Shorty (1995)')\n",
-      "43 ('Comedy', 'It Takes Two (1995)')\n",
-      "44 ('Comedy', 'Clueless (1995)')\n",
-      "45 ('Comedy', 'To Die For (1995)')\n",
-      "46 ('Comedy', 'Mighty Aphrodite (1995)')\n",
-      "47 ('Comedy', '\"Postman, The (Postino, Il) (1994)')\n",
-      "48 ('Comedy', \"Don't Be a Menace to South Central While Drinking Your Juice in the Hood (1996)\")\n",
-      "49 ('Comedy', 'Two if by Sea (1996)')\n",
-      "50 ('Comedy', 'Bio-Dome (1996)')\n",
-      "51 ('Comedy', 'French Twist (Gazon maudit) (1995)')\n",
-      "52 ('Comedy', 'Friday (1995)')\n",
-      "53 ('Comedy', 'From Dusk Till Dawn (1996)')\n",
-      "54 ('Comedy', 'Kicking and Screaming (1995)')\n",
-      "55 ('Comedy', 'Big Bully (1996)')\n",
-      "56 ('Comedy', \"Antonia's Line (Antonia) (1995)\")\n",
-      "57 ('Comedy', 'Dunston Checks In (1996)')\n",
-      "58 ('Comedy', 'Black Sheep (1996)')\n",
-      "59 ('Comedy', 'Vampire in Brooklyn (1995)')\n",
-      "60 ('Comedy', 'Beautiful Girls (1996)')\n",
-      "61 ('Comedy', 'In the Bleak Midwinter (1995)')\n",
-      "62 ('Comedy', 'Bottle Rocket (1996)')\n",
-      "63 ('Comedy', 'Mr. Wrong (1996)')\n",
-      "64 ('Comedy', 'Happy Gilmore (1996)')\n",
-      "65 ('Comedy', 'Nobody Loves Me (Keiner liebt mich) (1994)')\n",
-      "66 ('Comedy', 'Muppet Treasure Island (1996)')\n",
-      "67 ('Comedy', 'Rumble in the Bronx (Hont faan kui) (1995)')\n",
-      "68 ('Fantasy', 'Jumanji (1995)')\n",
-      "69 ('Fantasy', '\"City of Lost Children, The (Cité des enfants perdus, La) (1995)')\n",
-      "70 ('Fantasy', 'Mortal Kombat (1995)')\n",
-      "71 ('Grumpier Old Men (1995)', 'Romance')\n",
-      "72 ('Romance', 'Waiting to Exhale (1995)')\n",
-      "73 ('Romance', 'Sabrina (1995)')\n",
-      "74 ('Romance', 'Cutthroat Island (1995)')\n",
-      "75 ('Romance', 'Sense and Sensibility (1995)')\n",
-      "76 ('Romance', 'Leaving Las Vegas (1995)')\n",
-      "77 ('Romance', 'Persuasion (1995)')\n",
-      "78 ('Romance', 'Clueless (1995)')\n",
-      "79 ('Romance', 'How to Make an American Quilt (1995)')\n",
-      "80 ('Romance', 'Pocahontas (1995)')\n",
-      "81 ('Romance', 'When Night Is Falling (1995)')\n",
-      "82 ('Romance', 'Mighty Aphrodite (1995)')\n",
-      "83 ('Romance', 'Two if by Sea (1996)')\n",
-      "84 ('Romance', 'French Twist (Gazon maudit) (1995)')\n",
-      "85 ('Romance', 'Bed of Roses (1996)')\n",
-      "86 ('Romance', \"Things to Do in Denver When You're Dead (1995)\")\n",
-      "87 ('Romance', 'Once Upon a Time... When We Were Colored (1995)')\n",
-      "88 ('Romance', 'Angels and Insects (1995)')\n",
-      "89 ('Romance', 'Vampire in Brooklyn (1995)')\n",
-      "90 ('Romance', 'Beautiful Girls (1996)')\n",
-      "91 ('Romance', 'Bottle Rocket (1996)')\n",
-      "92 ('Waiting to Exhale (1995)', 'Drama')\n",
-      "93 ('Drama', '\"American President, The (1995)')\n",
-      "94 ('Drama', 'Nixon (1995)')\n",
-      "95 ('Drama', 'Casino (1995)')\n",
-      "96 ('Drama', 'Sense and Sensibility (1995)')\n",
-      "97 ('Drama', 'Money Train (1995)')\n",
-      "98 ('Drama', 'Copycat (1995)')\n",
-      "99 ('Drama', 'Powder (1995)')\n",
-      "100 ('Drama', 'Leaving Las Vegas (1995)')\n",
-      "101 ('Drama', 'Othello (1995)')\n",
-      "102 ('Drama', 'Now and Then (1995)')\n",
-      "103 ('Drama', 'Persuasion (1995)')\n",
-      "104 ('Drama', '\"City of Lost Children, The (Cité des enfants perdus, La) (1995)')\n",
-      "105 ('Drama', 'Shanghai Triad (Yao a yao yao dao waipo qiao) (1995)')\n",
-      "106 ('Drama', 'Dangerous Minds (1995)')\n",
-      "107 ('Drama', 'Babe (1995)')\n",
-      "108 ('Drama', 'Dead Man Walking (1995)')\n",
-      "109 ('Drama', 'Richard III (1995)')\n",
-      "110 ('Drama', 'Dead Presidents (1995)')\n",
-      "111 ('Drama', 'Restoration (1995)')\n",
-      "112 ('Drama', 'To Die For (1995)')\n",
-      "113 ('Drama', 'How to Make an American Quilt (1995)')\n",
-      "114 ('Drama', 'Pocahontas (1995)')\n",
-      "115 ('Drama', 'When Night Is Falling (1995)')\n",
-      "116 ('Drama', 'Mighty Aphrodite (1995)')\n",
-      "117 ('Drama', 'Lamerica (1994)')\n",
-      "118 ('Drama', 'Georgia (1995)')\n",
-      "119 ('Drama', 'Home for the Holidays (1995)')\n",
-      "120 ('Drama', '\"Postman, The (Postino, Il) (1994)')\n",
-      "121 ('Drama', 'Eye for an Eye (1996)')\n",
-      "122 ('Drama', \"Mr. Holland's Opus (1995)\")\n",
-      "123 ('Drama', 'Kicking and Screaming (1995)')\n",
-      "124 ('Drama', '\"Misérables, Les (1995)')\n",
-      "125 ('Drama', 'Bed of Roses (1996)')\n",
-      "126 ('Drama', 'Big Bully (1996)')\n",
-      "127 ('Drama', '\"Crossing Guard, The (1995)')\n",
-      "128 ('Drama', '\"Juror, The (1996)')\n",
-      "129 ('Drama', \"Things to Do in Denver When You're Dead (1995)\")\n",
-      "130 ('Drama', \"Antonia's Line (Antonia) (1995)\")\n",
-      "131 ('Drama', 'Once Upon a Time... When We Were Colored (1995)')\n",
-      "132 ('Drama', 'Angels and Insects (1995)')\n",
-      "133 ('Drama', 'White Squall (1996)')\n",
-      "134 ('Drama', 'Mary Reilly (1996)')\n",
-      "135 ('Drama', 'Beautiful Girls (1996)')\n",
-      "136 ('Drama', 'In the Bleak Midwinter (1995)')\n",
-      "137 ('Drama', 'City Hall (1996)')\n",
-      "138 ('Drama', '\"Bridges of Madison County, The (1995)')\n",
-      "139 ('Drama', 'Nobody Loves Me (Keiner liebt mich) (1994)')\n",
-      "140 ('Drama', 'Braveheart (1995)')\n",
-      "141 ('Drama', 'Taxi Driver (1976)')\n",
-      "142 ('Heat (1995)', 'Action')\n",
-      "143 ('Heat (1995)', 'Crime')\n",
-      "144 ('Heat (1995)', 'Thriller')\n",
-      "145 ('Action', 'Sudden Death (1995)')\n",
-      "146 ('Action', 'GoldenEye (1995)')\n",
-      "147 ('Action', 'Cutthroat Island (1995)')\n",
-      "148 ('Action', 'Money Train (1995)')\n",
-      "149 ('Action', 'Assassins (1995)')\n",
-      "150 ('Action', 'Dead Presidents (1995)')\n",
-      "151 ('Action', 'Mortal Kombat (1995)')\n",
-      "152 ('Action', 'Lawnmower Man 2: Beyond Cyberspace (1996)')\n",
-      "153 ('Action', 'From Dusk Till Dawn (1996)')\n",
-      "154 ('Action', 'Fair Game (1995)')\n",
-      "155 ('Action', 'Screamers (1995)')\n",
-      "156 ('Action', '\"Crossing Guard, The (1995)')\n",
-      "157 ('Action', 'White Squall (1996)')\n",
-      "158 ('Action', 'Nick of Time (1995)')\n",
-      "159 ('Action', 'Broken Arrow (1996)')\n",
-      "160 ('Action', 'Braveheart (1995)')\n",
-      "161 ('Action', 'Rumble in the Bronx (Hont faan kui) (1995)')\n",
-      "162 ('Crime', 'Casino (1995)')\n",
-      "163 ('Crime', 'Money Train (1995)')\n",
-      "164 ('Crime', 'Get Shorty (1995)')\n",
-      "165 ('Crime', 'Copycat (1995)')\n",
-      "166 ('Crime', 'Assassins (1995)')\n",
-      "167 ('Crime', 'Shanghai Triad (Yao a yao yao dao waipo qiao) (1995)')\n",
-      "168 ('Crime', 'Dead Man Walking (1995)')\n",
-      "169 ('Crime', 'Dead Presidents (1995)')\n",
-      "170 ('Crime', '\"Usual Suspects, The (1995)')\n",
-      "171 ('Crime', \"Don't Be a Menace to South Central While Drinking Your Juice in the Hood (1996)\")\n",
-      "172 ('Crime', '\"Crossing Guard, The (1995)')\n",
-      "173 ('Crime', \"Things to Do in Denver When You're Dead (1995)\")\n",
-      "174 ('Crime', '\"Hate (Haine, La) (1995)')\n",
-      "175 ('Crime', 'Bottle Rocket (1996)')\n",
-      "176 ('Crime', 'Taxi Driver (1976)')\n",
-      "177 ('Crime', 'Rumble in the Bronx (Hont faan kui) (1995)')\n",
-      "178 ('Thriller', 'GoldenEye (1995)')\n",
-      "179 ('Thriller', 'Money Train (1995)')\n",
-      "180 ('Thriller', 'Get Shorty (1995)')\n",
-      "181 ('Thriller', 'Copycat (1995)')\n",
-      "182 ('Thriller', 'Assassins (1995)')\n",
-      "183 ('Thriller', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)')\n",
-      "184 ('Thriller', 'To Die For (1995)')\n",
-      "185 ('Thriller', 'Seven (a.k.a. Se7en) (1995)')\n",
-      "186 ('Thriller', 'Eye for an Eye (1996)')\n",
-      "187 ('Thriller', 'Lawnmower Man 2: Beyond Cyberspace (1996)')\n",
-      "188 ('Thriller', 'From Dusk Till Dawn (1996)')\n",
-      "189 ('Thriller', 'Screamers (1995)')\n",
-      "190 ('Thriller', 'Nick of Time (1995)')\n",
-      "191 ('Thriller', 'Mary Reilly (1996)')\n",
-      "192 ('Thriller', 'Broken Arrow (1996)')\n",
-      "193 ('Thriller', 'City Hall (1996)')\n",
-      "194 ('Thriller', 'Unforgettable (1996)')\n",
-      "195 ('Thriller', 'Taxi Driver (1976)')\n",
-      "196 ('\"American President, The (1995)', 'Romance\"')\n",
-      "197 ('Romance\"', '\"Postman, The (Postino, Il) (1994)')\n",
-      "198 ('Romance\"', '\"Bridges of Madison County, The (1995)')\n",
-      "199 ('Dracula: Dead and Loving It (1995)', 'Horror')\n",
-      "200 ('Horror', 'Copycat (1995)')\n",
-      "201 ('Horror', 'From Dusk Till Dawn (1996)')\n",
-      "202 ('Horror', 'Mary Reilly (1996)')\n",
-      "203 ('Horror', 'Vampire in Brooklyn (1995)')\n",
-      "204 ('Copycat (1995)', 'Mystery')\n",
-      "205 ('Mystery', '\"City of Lost Children, The (Cité des enfants perdus, La) (1995)')\n",
-      "206 ('Mystery', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)')\n",
-      "207 ('Mystery', 'Seven (a.k.a. Se7en) (1995)')\n",
-      "208 ('Mystery', '\"Usual Suspects, The (1995)')\n",
-      "209 ('Mystery', 'Unforgettable (1996)')\n",
-      "210 ('Powder (1995)', 'Sci-Fi')\n",
-      "211 ('Sci-Fi', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)')\n",
-      "212 ('Sci-Fi', 'Lawnmower Man 2: Beyond Cyberspace (1996)')\n",
-      "213 ('Sci-Fi', 'Screamers (1995)')\n",
-      "214 ('Sci-Fi', 'Unforgettable (1996)')\n",
-      "215 ('\"City of Lost Children, The (Cité des enfants perdus, La) (1995)', 'Sci-Fi\"')\n",
-      "216 ('\"Cry, the Beloved Country (1995)', 'Drama\"')\n",
-      "217 ('Drama\"', '\"White Balloon, The (Badkonake sefid) (1995)')\n",
-      "218 ('Drama\"', '\"Hate (Haine, La) (1995)')\n",
-      "219 ('Richard III (1995)', 'War')\n",
-      "220 ('War', 'Braveheart (1995)')\n",
-      "221 ('Pocahontas (1995)', 'Musical')\n",
-      "222 ('Musical', 'Muppet Treasure Island (1996)')\n",
-      "223 ('\"Usual Suspects, The (1995)', 'Thriller\"')\n",
-      "224 ('Thriller\"', '\"Crossing Guard, The (1995)')\n",
-      "225 ('Thriller\"', '\"Juror, The (1996)')\n",
-      "226 ('\"Big Green, The (1995)', 'Comedy\"')\n",
-      "227 ('\"Indian in the Cupboard, The (1995)', 'Fantasy\"')\n",
-      "228 ('\"Misérables, Les (1995)', 'War\"')\n"
+      "10 ('Adventure', '\"City of Lost Children, The (Cité des enfants perdus, La) (1995)')\n"
      ]
     }
    ],
@@ -460,11 +134,15 @@
     "#check nodes and edges\n",
     "print(\"Printing Nodes:\")\n",
     "for i,node in enumerate(G.nodes()):\n",
+    "    if i>10:\n",
+    "        break\n",
     "    print(i,node)\n",
     "print(\"\\n\")\n",
     "    \n",
     "print(\"Printing Edges:\")\n",
     "for i,edge in enumerate(G.edges()):\n",
+    "    if i>10:\n",
+    "        break\n",
     "    print(i,edge)\n"
    ]
   },
