--- a/Week3/Week3 - Graph Visualization.ipynb
+++ b/Week3/Week3 - Graph Visualization.ipynb
@@ -7,6 +7,12 @@
     "# DATA 620 - Week 3 - Team1\n",
     "\n",
     "\n",
+    "#### Feb 18, 2019\n",
+    "\n",
+    "- P. Britton\n",
+    "- J. Grivens-Doyle\n",
+    "- M. Khan\n",
+    "\n",
     "The task this week is to: \n",
     "1.  Load a graph of your choosing from a text file or other source into a graph database or NetworkX.\n",
     "2.  Create basic analysis on the graph, including the graph’s diameter, and at least one other metric of your choosing.\n",
@@ -140,9 +146,14 @@
     "\n",
     "#pull the adjList from github\n",
     "url = 'https://raw.githubusercontent.com/plb2018/data620/master/Week3/adj.csv'\n",
-    "r =  requests.get(url)\n",
-    "#G=nx.read_adjlist(r,delimiter='|')\n",
+    "r = requests.get(url).content.decode('utf-8')\n",
     "\n",
+    "'''A quick note:  when pulling from the above, the raw data appears to be parsed slightly differently than \n",
+    "when downloading the file and loading locally.  This creates slight differences in output.  We weren't \n",
+    "sure exactly why this was the case.  The results shown here were generated using a local file.\n",
+    "'''\n",
+    "\n",
+    "#G=nx.read_adjlist(r,delimiter='|')\n",
     "G=nx.read_adjlist(localPath+'adj.csv',delimiter='|')\n",
     "\n",
     "print(\"-----Printing Network Info:\")\n",
