--- a/Week3/Week3 - Graph Visualization.ipynb
+++ b/Week3/Week3 - Graph Visualization.ipynb
@@ -20,7 +20,7 @@
     "4.  Record a short video (~ 5 minutes), and submit a link to the video in advance of our meet-up.\n",
     "\n",
     "\n",
-    "For this task we've chosen to work with a subset of the latest movielense data, which has been added to [github](https://github.com/plb2018/data620/tree/master/Week3/ml-latest-small) to facilitate easy reproducibility.\n",
+    "For this task we've chosen to work with a subset of the latest [movielense data](https://grouplens.org/datasets/movielens/latest/), which has been added to [github](https://github.com/plb2018/data620/tree/master/Week3/ml-latest-small) to facilitate easy reproducibility.\n",
     "\n",
     "First, we'll set do some setup.  I used a local path just to make things easier when creating and saving an \"adjacency list\" file, which has subsequently been loaded to github also."
    ]
